# voxel

./: CMakeLists.txt  README.md
res/shaders/: plain.vs
src/: glmi.hpp  main.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.hpp
